<resources>
    <string name="app_name">CaculatorTest</string>
    <string name="calculator_title">简易计算器</string>

    <string name="caculator_remove">回退</string>
    <string name="caculator_exit_text">请输入你要输入的内容</string>
    <string name="caculator_delete">消除</string>

    <string name="calculator_zero">0</string>
    <string name="calculator_one">1</string>
    <string name="calculator_two">2</string>
    <string name="calculator_three">3</string>
    <string name="calculator_four">4</string>
    <string name="calculator_five">5</string>
    <string name="calculator_six">6</string>
    <string name="calculator_seven">7</string>
    <string name="calculator_eight">8</string>
    <string name="calculator_nine">9</string>

    <string name="calculator_add">+</string>
    <string name="calculator_subtraction">-</string>
    <string name="calculator_multiplication">x</string>
    <string name="calculator_division">÷</string>
    <string name="calculator_equal">=</string>
    <string name="calculator_point">.</string>


    <string name="calculator_derivative">1/x</string>
    <string name="calculator_">wan</string>


</resources>